--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
     </header>
     <div class="main-section">
         <h2>About Me</h2>
-        <p>Hi, I'm [Your Name], a passionate Data Scientist with a knack for creating AI/ML solutions and insightful visualizations. Explore my work and see how I can add value to your team or project.</p>
+        <p>Hi, I'm Vanessa, a passionate Data Scientist with a knack for creating AI/ML solutions and insightful visualizations. Explore my work and see how I can add value to your team or project.</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </div>
     <footer>
-        <p>&copy; 2024 My Portfolio. Designed by [Your Name].</p>
-        <p><a href="mailto:your.email@example.com">Contact Me</a></p>
+        <p>&copy; 2024 My Portfolio. Designed by Vanessa.</p>
+      #  <p><a href="mailto:your.email@example.com">Contact Me</a></p>
     </footer>
 </body>
 </html>
