--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #B5B5CF; /* Grey-lavender */
+            background-color: #ede0d4; 
             color: #333; /* Neutral dark color */
         }
         header {
-            background-color: #B5AE9B; /* Warm taupe */
+            background-color: #ede0d4; 
             padding: 20px;
             text-align: center;
         }
