--- a/overrides/modules/profile.html
+++ b/overrides/modules/profile.html
@@ -1,7 +1,11 @@
 <div class="profile container" style="padding: 2rem;">
   <div class="row align-items-center justify-content-center">
     <div class="col vanessa-header">
-      <h1 style="font-weight: bolder; font-size:3rem;">Vanessa Eaton</h1>
+      <h1 style="font-size:3rem;">Vanessa Eaton</h1>
+      <address>
+        623-326-7346 | <a href="mailto:eaton.vanessa@gmail.com">eaton.vanessa@gmail.com</a>
+      </address>
+        
     </div>
     <div class="col justify-content-center">
         <img src="/assets/ProfilePic.png" alt="{{ config.site_name }} profile" class="profile-img">
